update image on window resize
+ add music toggle to pause and play

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
    <main>
       <section id="joke-section">
          <div id="joke-content">
-            <h1 id="jokeTitle">Joke Of The Day</h1>
-            <p id="joke"></p>
+            <div class="joke-content-text">
+               <h1 id="jokeTitle">Joke Of The Day</h1>
+               <p id="joke"></p>
+            </div>
+            <img id="jokeImgContainer" src="images/jokecontainer-mobile.webp" alt="pixelated cliffs">
          </div>
          <div id="joke-buttons">
             <h2>Generate A New Random Joke By Category</h2>
@@ -26,6 +29,7 @@
             <button id="christmas">Christmas</button>
          </div>
       </section>
+      <button id="bgmToggle">Pause Music</button>
    </main>
    <script src="script.js"></script>
 </body>
